<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="itemDetailFragment"
            type="com.example.xlmp13.ui.ItemDetailFragment" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:paddingTop="10dp"
        tools:context=".ui.ItemDetailFragment">
    
        <TextView
            android:id="@+id/item_name"
            style="@style/Widget.Inventory.Header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/item_price"
            app:layout_constraintHorizontal_weight="2"
            android:text="@string/item"
            android:textAlignment="center"
            />

        <TextView
            style="@style/Widget.Inventory.Header"
            android:id="@+id/item_price"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_name"
            app:layout_constraintEnd_toStartOf="@id/item_quantity"
            app:layout_constraintHorizontal_weight="1"
            android:textAlignment="center"
            android:text="@string/price"
            />

        <TextView
            style="@style/Widget.Inventory.Header"
            android:id="@+id/item_quantity"
            app:layout_constraintStart_toEndOf="@id/item_price"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            android:textAlignment="center"
            android:text="@string/quantity_in_stock"
            />

        <View
            android:id="@+id/divider"
            style="@style/Divider"
            android:layout_marginTop="@dimen/margin_between_layouts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_quantity" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            tools:listitem="@layout/item_list_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:scrollbars="vertical"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_new_item"
            android:layout_marginBottom="18dp"
            android:onClick="@{() -> itemDetailFragment.goToAddItemFragment()}"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:tint="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>