<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="addItemFragment"
            type="com.example.xlmp13.ui.AddItemFragment" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".ui.AddItemFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_name"
                android:inputType="text"
                style="@style/Widget.Inventory.TextInputLayout.OutlinedBox"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemPriceInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Item Price"
                android:inputType="numberDecimal"
                style="@style/Widget.Inventory.TextInputLayout.OutlinedBox"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemQuantityInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity_in"
                android:inputType="numberSigned"
                style="@style/Widget.Inventory.TextInputLayout.OutlinedBox"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cornerRadius="8dp"
            android:text="@string/save"
            android:onClick="@{() -> addItemFragment.submitData()}"
            />
    </LinearLayout>
</layout>